--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "angular-calendar": "^0.31.1",
     "date-fns": "^2.29.3",
     "project-name": "file:",
