--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "@auth0/auth0-angular": "^2.2.3",
     "angular-calendar": "^0.31.1",
+    "angularx-social-login": "^4.1.0",
     "date-fns": "^2.29.3",
     "project-name": "file:",
     "rxjs": "~7.8.0",
